FIX: WAVE accessment colour contrast changes required.

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,7 +8,7 @@
     /* colors generated by adobe colour wheel */
     --primary-color: #9dc6e0;
     /* light blue */
-    --secondary-color: #1e87c9;
+    --secondary-color: #3fa7e7;
     /* blue */
     --highlight-color: #1bb5f1;
     /* blue */
@@ -40,6 +40,15 @@ h3 {
 /* base.html */
 #navbar {
     background-color: var(--secondary-color);
+}
+
+.nav-item .nav-link {
+    font-size: 16px;
+    font-weight: 500px;
+}
+
+.nav-item .active {
+    font-weight:800px;
 }
 
 footer {
